tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_integer_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let isZero =
  \0 => true
  \1 => false
  \_ => false

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
