tests/snapshots/test_runner__tests__compiler__typecheck__enum_8.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Void enum (i.e. no constructor)
enum Void {

}

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
