tests/snapshots/test_runner__tests__compiler__typecheck__import_12.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo : Int = 2

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
