tests/snapshots/test_runner__tests__compiler__typecheck__monadic_let_null_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let guess = \x =>
  let null = x
  2

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
