tests/snapshots/test_runner__tests__compiler__typecheck__progressive_unification_6.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let match = | x f => x.f()

let arrayMap =
  | [] _ => []
  | [head ..._] f => [head.f()]

let result = [{foo 2 bar "hi"}].arrayMap(|.zap)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_6.kk:7:44
  │
7 │ let result = [{foo 2 bar "hi"}].arrayMap(|.zap)
  │                                            ^^^ No such property
  │
  = Available properties:
      bar
      foo
