tests/snapshots/test_runner__tests__compiler__typecheck__record_wildcard_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// No error
type People = {
  firstName: String,
  lastName: String
}

let toString = ({ ... }: People): String => "${firstName}, ${lastName}"

{ firstName: "Adam", lastName: "Bob" }.toString().print()

============
EXIT CODE
============
0

============
STDOUT
============
Adam, Bob

============
STDERR
============
