tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_float_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let a: Float = 1.0
let b: Float = 1

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_float_1.kk:2:16
  │
2 │ let b: Float = 1
  │                ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Float       | + Integer   |
    +---------------+-------------+
